test/libyul/yulSyntaxTests/number_literals_6.yul
{
	let x := 0b11111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111
}
// ----
// TypeError 6709: (12-271): Number literal too large (> 256 bits)
